src/objects/C501_Merge_Contact_History__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merge Contact Histories (Contact)</relationshipLabel>
        <relationshipName>Merge_Contact_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact Old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merge Contact Histories Old</relationshipLabel>
        <relationshipName>Merge_Contact_Histories_Old</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Value__c</fullName>
        <description>Value ignored during the merge and instead using the Merge value in the Merged object.</description>
        <inlineHelpText>Value ignored during the merge and instead using the Merge value in the Merged object.</inlineHelpText>
        <label>Ignore Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Value__c</fullName>
        <label>Merge Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>$User.FirstName &amp; &quot; &quot; &amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <label>Merge Contact History</label>
    <nameField>
        <displayFormat>Merge History {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Contact Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>